Delete custom css that is causing a bug on mobile

--- a/src/platform/site-wide/sass/modules/_m-medallia.scss
+++ b/src/platform/site-wide/sass/modules/_m-medallia.scss
@@ -35,27 +35,7 @@
   width: 50px;
 }
 
-/* Add padding to the bottom of the Medallia form */
-/* `.ng-scope .panel-footer-web` is common to multiple Medallia forms and form pages */
-.ng-scope .panel-footer-web {
-  padding-bottom: 1rem;
-}
-
 /* CSS Overrides for the 3-question survey on /find-locations */
-
-/* An excessively specific selector is needed to override !important and inline styles */
-/* The `ng-hide` class only seems to be used in mobile browsers/emulators, but not laptop browsers */
-#liveForm > div > div.row.neb-form-close-btn-container.ng-hide {
-  /* `display: block !important;` is necessary because the `ng-hide` class applies `display: none !important` */
-  display: block !important;
-  /* `margin-top: 0px !important;` is necessary because this element has an inline style of `margin-top: -50px;` */
-  margin-top: 0px !important;
-  /* `font-size: 14px !important;` is necessary because this element has an inline style of `font-size: 35px;` */
-  font-size: 14px !important;
-
-  /* Add `position: relative;` so `position: absolute;` can be applied to the child `button` element */
-  position: relative;
-}
 
 /* The `ng-hide` class only seems to be used in mobile browsers/emulators, but not laptop browsers */
 /* I tried `#liveForm > div > div.neb-show-button-as-link.neb-form-close-btn.pull-right`, but it didn't work */
